// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdvuGq sc-gsDLol nounu lhBfAf"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdvuGq sc-gsDLol jPrSNB lhBfAf"
>
  foo
</button>
`;
